# rgrid-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: shortcuts.h
lib/: Coordinate.h  Equation.cpp  Equation.h  GridPoint.cpp  GridPoint.h  Resistor.cpp  Resistor.h  ResistorGrid.cpp  ResistorGrid.h
